--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -18,7 +18,7 @@
     "m=1\n",
     "k_0=20\n",
     "L=20\n",
-    "t_0=0"
+    "t_0=0\n"
    ]
   },
   {
@@ -33,7 +33,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt \n",
+    "\n",
+    "\n",
+    "sigma_x=1 #??\n",
+    "xs=5 #bare satte 5 fordi vi skal ha den verdien etterhvert\n",
+    "C=1 #blehh bare satte noe, vi må vel normalisere\n",
+    "Nx= 200\n",
+    "\n",
+    "\n",
+    "\n",
+    "#finding E and omega based on forumula in text\n",
+    "E=(h_bar*k_0)**2/(2*m)\n",
+    "omega=E/h_bar\n",
+    "\n",
+    "\n",
+    "#Function to calculate imaginary part of psi\n",
+    "def find_psi_im(x,t):\n",
+    "    return C*np.exp(-(x-xs)**2/(2*sigma_x**2))*np.sin(k_0*x-omega*t)\n",
+    "\n",
+    "#function to calculate real part of psi \n",
+    "def find_psi_re(x,t):\n",
+    "    return C*np.exp(-(x-xs)**2/(2*sigma_x**2))*np.cos(k_0*x-omega*t)\n",
+    "\n",
+    "\n",
+    "#guessing a value for delta_t\n",
+    "delta_t=0.1\n",
+    "\n",
+    "#defining delta_x\n",
+    "delta_x= L/(Nx)\n",
+    "\n",
+    "#making arrays of initial values of psi_r(x,delta_t) and psi_i(x,0)\n",
+    "x=np.arange(0,L,delta_x)\n",
+    "\n",
+    "\n",
+    "psi_i=find_psi_im(x,0)\n",
+    "psi_r=find_psi_re(x,delta_t)\n",
+    "\n",
+    "plt.plot(x,psi_i)\n",
+    "plt.show()\n",
+    "plt.plot(x,psi_r)\n",
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,19 +139,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt \n",
-    "\n",
-    "C=1\n",
-    "sigma_x=1\n",
-    "k0=20\n",
-    "\n",
-    "\n",
-    "psi(x,t) = C * np.exp(-(x-xs)**2/(2*sigma_x**2))*np.exp(np.i(k0*x-omega*t))\n",
-    "\n",
-    "psiI"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -127,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
