--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -36,6 +36,13 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,7 +54,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_s=5\n",
+    "L=2*10\n",
+    "x_end=15\n",
+    "\n",
+    "V_g=(h_bar*k_0)/m"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,7 +74,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l=L/50\n",
+    "V0=E/2\n",
+    "\n",
+    "def V(x):\n",
+    "    if (L/2-l/2<x)or(L/2+l/2>x):\n",
+    "        return E/2\n",
+    "    else: \n",
+    "        return 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +97,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\"Making a list of 50 different values of V0\"\n",
+    "V0_list=np.arange(0,(3*E)/2,50)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,7 +116,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"Making a list of 50 different values of L\"\n",
+    "L_list=np.arange(0,L/20,50)\n"
+   ]
   }
  ],
  "metadata": {
