--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -87,7 +87,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xlen=Nx\n",
+    "tlen=Nx\n",
+    "\n",
+    "def find_next_psi_re(x,t):\n",
+    "    return find_psi_re(x,t)+dt*((V(x)/h_bar)*find_psi_im(x,t+1)-(h_bar/(2*m))*(find_psi_im(x+1,t+1)-2*find_psi_im(x,t+1)+find_psi_im(x-1,t+1))/(dx**2))\n",
+    "\n",
+    "def find_next_psi_im(x,t):\n",
+    "    return find_psi_im(x,t-1)-dt*((V(x)/h_bar)*find_psi_re(x,t)-(h_bar/(2*m))*(find_psi_re(x+1,t)-2*find_psi_re(x,t)+find_psi_re(x-1,t))/(dx)**2)\n",
+    "\n",
+    "Psi_i=np.zeros((xlen,tlen))\n",
+    "Psi_i[0]=psi_i\n",
+    "\n",
+    "Psi_r=np.zeros((xlen,tlen))\n",
+    "Psi_r[0]=psi_r\n",
+    "\n",
+    "#print(Psi_r,Psi_i)\n",
+    "dx=0.1\n",
+    "dt=0.1\n",
+    "def V(x):\n",
+    "    return 0\n",
+    "\n",
+    "\"psi_i og Psi_r er arrays\"\n",
+    "def find_psi(Psi_i,Psi_r,xlen,dx,x0,tlen,dt,t0):\n",
+    "    for t in range(t0,tlen-1):\n",
+    "        #find next Psi_r\n",
+    "        for x in range(x0,xlen-1):\n",
+    "            Psi_r[x,t+1]=find_next_psi_re(x,t)\n",
+    "            Psi_i[x,t+1]=find_next_psi_im(x,t)\n",
+    "    return Psi_i,Psi_r\n",
+    "\n",
+    "Psi_I,Psi_R=find_psi(Psi_i,Psi_r,xlen,0.1,5,tlen,0.1,0)  \n",
+    "\n",
+    "print(Psi_I,Psi_R)\n"
+   ]
   },
   {
    "cell_type": "markdown",
