--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -78,6 +78,8 @@
     "\n",
     "#plotting\n",
     "plt.plot(x,psi_i)\n",
+    "plt.show()\n",
+    "\n",
     "plt.plot(x,psi_r)\n",
     "plt.show()\n",
     "\n",
@@ -90,18 +92,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "xlen=Nx\n",
     "tlen=Nx\n",
     "\n",
-    "def find_next_psi_re(x,t):\n",
-    "    return find_psi_re(x,t)+dt*((V(x)/h_bar)*find_psi_im(x,t+1)-(h_bar/(2*m))*(find_psi_im(x+1,t+1)-2*find_psi_im(x,t+1)+find_psi_im(x-1,t+1))/(dx**2))\n",
+    "dt=0.0001\n",
+    "dx=0.0001\n",
     "\n",
-    "def find_next_psi_im(x,t):\n",
-    "    return find_psi_im(x,t-1)-dt*((V(x)/h_bar)*find_psi_re(x,t)-(h_bar/(2*m))*(find_psi_re(x+1,t)-2*find_psi_re(x,t)+find_psi_re(x-1,t))/(dx)**2)\n",
+    "def V(x):\n",
+    "    return 0\n",
     "\n",
+    "def next_psi(xarray,timesteps,psi_r_0,psi_i_0,dt,dx):\n",
+    "    psi_i=psi_i_0\n",
+    "    psi_r=psi_r_0\n",
+    "    for ti in range(timesteps):\n",
+    "        #for xi in range(1,len(x)-1):\n",
+    "            #diff=dt*((V(x)/h_bar)*psi_r[xi]-(h_bar/(2*m))*(psi_r[xi+1]-2*psi_r[xi]+psi_r[xi-1])/dx**2)\n",
+    "            #print(diff)\n",
+    "            #print((psi_r[xi+1]-2*psi_r[xi]+psi_r[xi-1]),old_psi_r[xi])\n",
+    "            \n",
+    "            #psi_i[xi]=old_psi_i[xi]-dt*((V(x)/h_bar)*psi_r[xi]-(h_bar/(2*m))*(psi_r[xi+1]-2*psi_r[xi]+psi_r[xi-1])/dx**2)\n",
+    "        #psi_r[xi]=old_psi_r[xi]-dt*((V(x)/h_bar)*psi_i[xi]-(h_bar/(2*m))*(psi_i[xi+1]-2*psi_i[xi]+psi_i[xi-1])/dx**2)\n",
+    "    return psi_r,psi_i\n",
+    "\n",
+    "new_psi_r,new_psi_i=next_psi(x,10,psi_r,psi_i,dt,dx)\n",
+    "\n",
+    "plt.plot(x,new_psi_r)\n",
+    "\n",
+    "\"\"\"\n",
+    "def find_next_psi(x,t):\n",
+    "    #psi_r=find_psi_re(x,t)\n",
+    "    for ti in range(t):\n",
+    "        for xi in range(len(x)):\n",
+    "            psi_i=find_psi_im(x,t-(delta_t/2))-dt*((V(x)/h_bar)*find_psi_re(x,t)-(h_bar/(2*m))*(find_psi_re(x+1,t)-2*find_psi_re(x,t)+find_psi_re(x-1,t))/(dx)**2)\n",
+    "            #last_psi_r=psi_r\n",
+    "            psi_r=find_psi_re(x,t)+dt*((V(x)/h_bar)*find_psi_im(x,t+1)-(h_bar/(2*m))*(find_psi_im(x+1,t+1)-2*find_psi_im(x,t+1)+find_psi_im(x-1,t+1))/(dx**2))\n",
+    "            #print(psi_r-last_psi_r)\n",
+    "            \n",
+    "    return psi_r,psi_i\n",
+    "\n",
+    "\n",
+    "psi_r,psi_i=find_next_psi(x,100)\n",
+    "plt.plot(x,psi_r)\n",
+    " \"\"\"\n",
+    "\"\"\"\n",
     "Psi_i=np.zeros((xlen,tlen))\n",
     "Psi_i[0]=psi_i\n",
     "\n",
@@ -125,7 +163,8 @@
     "\n",
     "Psi_I,Psi_R=find_psi(Psi_i,Psi_r,xlen,0.1,5,tlen,0.1,0)  \n",
     "\n",
-    "print(Psi_I,Psi_R)\n"
+    "#print(Psi_I,Psi_R)\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -150,7 +189,20 @@
     "T= L/(2*v_g)\n",
     "print(v_g,T)\n",
     "\n",
-    "    "
+    "count=0\n",
+    "t0=0\n",
+    "x0=0\n",
+    "\n",
+    "for t in range(t0,tlen-1):\n",
+    "    count+=1\n",
+    "    for X in range(x0,xlen-1):\n",
+    "        psi_i=find_next_psi_re(X,t)\n",
+    "        psi_r=find_next_psi_im(X,t)\n",
+    "    if count%10==0:\n",
+    "        print(psi_i)\n",
+    "        plt.plot(x,psi_i)\n",
+    "        plt.plot(x,psi_r)\n",
+    "    \n"
    ]
   },
   {
@@ -168,7 +220,7 @@
     "                     \n",
     "def newPsi_re(psi_i,psi,delta_x,delta_t, V):\n",
     "    nextPsi_r=np.zeros(len(psi_r))\n",
-    "    psi_r[1:-1] = \n",
+    "    #psi_r[1:-1] = \n",
     "\n",
     "def propagate_psi_in_time(psi_i,psi_r,delta_x,delta_t,T):\n",
     "    return 0\n",
@@ -238,6 +290,75 @@
     "\"Making a list of 50 different values of L\"\n",
     "L_list=np.linspace(0,L/20,50)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Animasjuun\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from matplotlib import animation, rc\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "# First set up the figure, the axis, and the plot element we want to animate\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.set_xlim(( 0, 2))\n",
+    "ax.set_ylim((-2, 2))\n",
+    "\n",
+    "line, = ax.plot([], [], lw=2)\n",
+    "\n",
+    "# initialization function: plot the background of each frame\n",
+    "def init():\n",
+    "    line.set_data([], [])\n",
+    "    return (line,)\n",
+    "\n",
+    "# animation function. This is called sequentially\n",
+    "def animate(i):\n",
+    "    x = np.linspace(0, 2, 1000)\n",
+    "    y = np.sin(2 * np.pi * (x - 0.01 * i))\n",
+    "    line.set_data(x, y)\n",
+    "    return (line,)\n",
+    "\n",
+    "# call the animator. blit=True means only re-draw the parts that have changed.\n",
+    "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
+    "                               frames=100, interval=20, blit=True)\n",
+    "\n",
+    "#rc('animation', html='html5')\n",
+    "#rc('animation', html='jshtml')\n",
+    "HTML(anim.to_html5_video())\n",
+    "\n",
+    "anim.save('filename.gif', writer='imagemagic')\n",
+    "\n",
+    "from IPython.display import Image\n",
+    "with open('filename.gif','rb') as file:\n",
+    "    display(Image(file.read()), format='png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -256,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
