--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -208,33 +208,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"Sigrids tester\"\"\"\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt \n",
+    "import matplotlib.animation as animation\n",
     "\n",
-    "def newPsi_im(psi_i,psi_r,delta_x,delta_t, V):\n",
-    "    #nextPsi_i=np.zeros(len(psi_i)\n",
-    "    psi_i[1:-1] = psi_i[1:-1] - delta_t *((V[1:-1]/h_bar*psi_r[1:-1]) - h_bar/(2*m) *(psi_r[2:]-2*psi[1:-1]+psi[:-2])/delta_t**2)\n",
-    "    return psi_i\n",
-    "                     \n",
-    "def newPsi_re(psi_i,psi,delta_x,delta_t, V):\n",
-    "    nextPsi_r=np.zeros(len(psi_r))\n",
-    "    #psi_r[1:-1] = \n",
+    "#%matplotlib notebook \n",
     "\n",
-    "def propagate_psi_in_time(psi_i,psi_r,delta_x,delta_t,T):\n",
-    "    return 0\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"Sigrids tester\"\"\"\n",
-    "%matplotlip notebook \n",
+    "\n",
+    "h_bar=1\n",
+    "m=1\n",
+    "k_0=20\n",
+    "L=20\n",
+    "t_0=0\n",
+    "\n",
+    "sigma_x=2 #??\n",
+    "xs=10 #bare satte 5 fordi vi skal ha den verdien etterhvert\n",
+    "C=1 #blehh bare satte noe, vi må vel normalisere\n",
+    "Nx= 500\n",
+    "\n",
+    "#finding E and omega based on forumula in text\n",
+    "E=(h_bar*k_0)**2/(2*m)\n",
+    "omega=E/h_bar\n",
+    "\n",
+    "#guessing a value for delta_t\n",
+    "delta_t=0.00001\n",
+    "\n",
+    "#defining delta_x\n",
+    "delta_x= L/(Nx)\n",
+    "\n",
+    "\n",
+    "#Function to calculate imaginary part of psi\n",
+    "def find_psi_im(x,t):\n",
+    "    return C*np.exp(-(x-xs)**2/(2*sigma_x**2))*np.sin(k_0*x-omega*t)\n",
+    "\n",
+    "#function to calculate real part of psi \n",
+    "def find_psi_re(x,t):\n",
+    "    return C*np.exp(-(x-xs)**2/(2*sigma_x**2))*np.cos(k_0*x-omega*t)\n",
+    "\n",
     "\n",
     "x=np.arange(0,L,delta_x)\n",
     "V=np.zeros(len(x))\n",
@@ -243,28 +259,88 @@
     "psi_i=find_psi_im(x,0)\n",
     "psi_r=find_psi_re(x,delta_t/2)\n",
     "\n",
+    "psi_i[0]=0\n",
+    "psi_i[-1]=0\n",
+    "psi_r[0]=0\n",
+    "psi_r[-1]\n",
+    "\n",
     "#normalization\n",
     "psi_i=psi_i/np.linalg.norm(psi_i)\n",
     "psi_r=psi_r/np.linalg.norm(psi_r)\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "line, = ax.plot(x, psi_i)\n",
     "\n",
     "\n",
     "def newPsi_im(psi_i,psi_r,delta_x,delta_t, V):\n",
-    "    #nextPsi_i=np.zeros(len(psi_i)\n",
-    "    psi_i[1:-1] = psi_i[1:-1] - delta_t *((V[1:-1]/h_bar*psi_r[1:-1]) - h_bar/(2*m) *(psi_r[2:]-2*psi_r[1:-1]+psi_r[:-2])/delta_t**2)\n",
-    "    return psi_i\n",
+    "    nextPsi_i=np.zeros(len(psi_i))\n",
+    "    #psi_i[1:-1] = psi_i[1:-1] - delta_t *((V[1:-1]/h_bar*psi_r[1:-1]) - h_bar/(2*m) *(psi_r[2:]-2*psi_r[1:-1]+psi_r[:-2])/delta_x**2)\n",
+    "    \n",
+    "    nextPsi_i[1:-1] = psi_i[1:-1] - delta_t *(V[1:-1]/h_bar*psi_r[1:-1] - h_bar/(2*m) *(psi_r[2:]-2*psi_r[1:-1]+psi_r[:-2])/delta_x**2)\n",
+    "    #print(psi_i[1],V[1],psi_r[2],psi_r[1],psi_r[0])\n",
+    "    #print(psi_i[1],V[1],psi_r[2],psi_r[1],psi_r[0])\n",
+    "    psi_i=nextPsi_i\n",
+    "    #psi_i=psi_i/np.linalg.norm(psi_i)\n",
+    "    return nextPsi_i\n",
     "                     \n",
     "def newPsi_re(psi_i,psi_r,delta_x,delta_t, V):\n",
     "    nextPsi_r=np.zeros(len(psi_r))\n",
-    "    psi_r[1:-1] = psi_r[1:-1] - delta_t *((V[1:-1]/h_bar*psi_i[1:-1]) - h_bar/(2*m) *(psi_i[2:]-2*psi_i[1:-1]+psi_i[:-2])/delta_t**2)\n",
-    "\n",
-    "def animate_psi_im(i): \n",
-    "    newPsi_im(psi_i,psi_r,delta_x,delta_t, V)\n",
+    "    #psi_r[1:-1] = psi_r[1:-1] - delta_t *((V[1:-1]/h_bar*psi_i[1:-1]) - h_bar/(2*m) *(psi_i[2:]-2*psi_i[1:-1]+psi_i[:-2])/delta_x**2)\n",
+    "    nextPsi_r[1:-1] = psi_r[1:-1] + delta_t *((V[1:-1]/h_bar*psi_i[1:-1]) - h_bar/(2*m) *(psi_i[2:]-2*psi_i[1:-1]+psi_i[:-2])/delta_x**2)\n",
+    "    psi_r=nextPsi_r\n",
+    "    return nextPsi_r\n",
     "    \n",
+    "\n",
+    "\n",
+    "#plt.plot(x,psi_i)\n",
+    "#plt.show()\n",
+    "\n",
+    "\n",
+    "#newPsi_im(psi_i,psi_r,delta_x,delta_t, V)\n",
+    "#psi_i=psi_i/np.linalg.norm(psi_i)\n",
+    "#plt.plot(x,psi_i)\n",
+    "#plt.show()\n",
+    "\n",
+    "\n",
+    "#plt.plot(x,psi_i)\n",
+    "#plt.plot(x,psi_r)\n",
+    "#for i in range(150000):\n",
+    "#    psi_i=newPsi_im(psi_i,psi_r,delta_x,delta_t, V)\n",
+    "#    psi_r=newPsi_re(psi_i,psi_r,delta_x,delta_t, V)\n",
+    "    \n",
+    "    \n",
+    "#print(psi_i[0])  \n",
+    "#print(psi_i[1],psi_i[2],psi_i[-2])\n",
+    "\n",
+    "#plt.plot(x,psi_i)\n",
+    "#plt.plot(x,psi_r)\n",
+    "#plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#making animation: (funker ikke enda) \n",
+    "    \n",
+    "    \n",
+    "def animate_psi_im(i): \n",
+    "    for i in range(100):\n",
+    "        psi_i=newPsi_im(psi_i,psi_r,delta_x,delta_t,V)\n",
+    "        psi_r=newPsi_re(psi_i,psi_r,delta_x,delta_t,V)\n",
     "    line.set_ydata(psi_i)\n",
-    "    \n"
+    "    return line\n",
+    "\n",
+    "def init():  # only required for blitting to give a clean slate.\n",
+    "    line.set_ydata([np.nan] * len(x))\n",
+    "    return line,\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "line, = ax.plot(x, psi_i)\n",
+    "ani = animation.FuncAnimation(fig, animate_psi_im, init_func=init, frames=100, interval=20, blit=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -424,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
