rydding + litt på oppgave 2

--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -21,11 +21,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#defining constants \n",
+    "\n",
     "h_bar=1\n",
     "m=1\n",
     "k_0=20\n",
     "L=20\n",
-    "t_0=0\n"
+    "t_0=0"
    ]
   },
   {
@@ -44,13 +46,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
     "\n",
+    "#for animasjon\n",
+    "import matplotlib.animation as animation\n",
+    "#%matplotlib notebook #bruke denne ved animasjon?\n",
+    "%matplotlib inline\n",
     "\n",
     "sigma_x=2 #??\n",
     "xs=5 #bare satte 5 fordi vi skal ha den verdien etterhvert\n",
-    "C=1 #blehh bare satte noe, vi må vel normalisere\n",
-    "Nx= 10000000\n",
-    "\n",
-    "\n",
+    "Nx= 1000\n",
     "\n",
     "#finding E and omega based on forumula in text\n",
     "E=(h_bar*k_0)**2/(2*m)\n",
@@ -59,30 +62,33 @@
     "\n",
     "#Function to calculate imaginary part of psi\n",
     "def find_psi_im(x,t):\n",
-    "    return C*np.exp(-(x-xs)**2/(2*sigma_x**2))*np.sin(k_0*x-omega*t)\n",
+    "    psi_i=np.zeros(len(x))\n",
+    "    #using the formula, but letting the ends be zero:\n",
+    "    psi_i[1:-1] = np.exp(-(x[1:-1]-xs)**2/(2*sigma_x**2))*np.sin(k_0*x[1:-1]-omega*t)\n",
+    "    psi_i=psi_i/np.linalg.norm(psi_i) #normalizing\n",
+    "    return psi_i\n",
     "\n",
     "#function to calculate real part of psi \n",
     "def find_psi_re(x,t):\n",
-    "    return C*np.exp(-(x-xs)**2/(2*sigma_x**2))*np.cos(k_0*x-omega*t)\n",
+    "    psi_r=np.zeros(len(x))\n",
+    "    #using the formula, but letting the ends be zero:\n",
+    "    psi_r[1:-1] = np.exp(-(x[1:-1]-xs)**2/(2*sigma_x**2))*np.cos(k_0*x[1:-1]-omega*t)\n",
+    "    psi_r=psi_r/np.linalg.norm(psi_r) #normalizing\n",
+    "    return psi_r\n",
+    "    \n",
+    "#guessing a value for delta_t \n",
+    "delta_t=0.00001\n",
     "\n",
+    "#defining delta_x \n",
+    "\"\"\"stemmer dette? Er lengda på arrayene Nx+1??\"\"\"\n",
+    "delta_x= L/(Nx)    \n",
     "\n",
-    "#guessing a value for delta_t\n",
-    "delta_t=1e-15\n",
-    "\n",
-    "#defining delta_x\n",
-    "delta_x= L/(Nx)\n",
-    "print(\"DX\",delta_x)\n",
-    "\n",
-    "#making arrays of initial values of psi_r(x,delta_t/2) and psi_i(x,0)\n",
+    "#making a array of x-values from 0 to L\n",
     "x=np.arange(0,L,delta_x)\n",
     "\n",
-    "\n",
+    "#making arrays of initial values of psi_r(x,delta_t/2) and psi_i(x,0)\n",
     "psi_i=find_psi_im(x,0)\n",
     "psi_r=find_psi_re(x,delta_t/2)\n",
-    "\n",
-    "#normalization\n",
-    "psi_i=psi_i/np.linalg.norm(psi_i)\n",
-    "psi_r=psi_r/np.linalg.norm(psi_r)\n",
     "\n",
     "#plotting\n",
     "plt.plot(x,psi_i)\n",
@@ -91,7 +97,9 @@
     "plt.plot(x,psi_r)\n",
     "plt.show()\n",
     "\n",
-    "psi_squared=find_psi_im(x,0)**2+find_psi_re(x,0)**2\n",
+    "\"\"\"ettersom vi har så liten delta_t, kanskje vi kan bruke de psi-ene vi har funnet????\"\"\"\n",
+    "psi_squared=find_psi_im(x,0)**2+find_psi_re(x,0)**2 \n",
+    "psi_squared=psi_i**2+psi_r**2 \n",
     "plt.plot(x,psi_squared)\n",
     "plt.show()\n",
     "\n"
@@ -105,6 +113,8 @@
    },
    "outputs": [],
    "source": [
+    "\"\"\"KRISTINE SE PÅ DETTE OG RYDD\"\"\"\n",
+    "\n",
     "xlen=Nx\n",
     "tlen=Nx\n",
     "\n",
@@ -195,6 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"KRISTINE: jeg vet ikke hva dette er, skal vi bare fjerne hele cellen?\"\"\"\n",
     "x_s=5\n",
     "L=2*10\n",
     "x_end=15\n",
@@ -228,63 +239,22 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"Sigrids tester\"\"\"\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt \n",
-    "import matplotlib.animation as animation\n",
+    "%matplotlib inline\n",
     "\n",
-    "#%matplotlib notebook \n",
+    "v_g=(h_bar*k_0)/m\n",
+    "T= L/(2*v_g)\n",
+    "timesteps=int(T/delta_t)\n",
     "\n",
+    "#setting the potensial to be zero \n",
+    "V2=np.zeros(len(x)) \n",
     "\n",
-    "h_bar=1\n",
-    "m=1\n",
-    "k_0=20\n",
-    "L=20\n",
-    "t_0=0\n",
-    "\n",
-    "sigma_x=2 #??\n",
-    "xs=10 #bare satte 5 fordi vi skal ha den verdien etterhvert\n",
-    "C=1 #blehh bare satte noe, vi må vel normalisere\n",
-    "Nx= 500\n",
-    "\n",
-    "#finding E and omega based on forumula in text\n",
-    "E=(h_bar*k_0)**2/(2*m)\n",
-    "omega=E/h_bar\n",
-    "\n",
-    "#guessing a value for delta_t\n",
-    "delta_t=0.00001\n",
-    "\n",
-    "#defining delta_x\n",
-    "delta_x= L/(Nx)\n",
-    "\n",
-    "\n",
-    "#Function to calculate imaginary part of psi\n",
-    "def find_psi_im(x,t):\n",
-    "    return C*np.exp(-(x-xs)**2/(2*sigma_x**2))*np.sin(k_0*x-omega*t)\n",
-    "\n",
-    "#function to calculate real part of psi \n",
-    "def find_psi_re(x,t):\n",
-    "    return C*np.exp(-(x-xs)**2/(2*sigma_x**2))*np.cos(k_0*x-omega*t)\n",
-    "\n",
-    "\n",
-    "x=np.arange(0,L,delta_x)\n",
-    "V=np.zeros(len(x))\n",
-    "\n",
-    "#initial values \n",
+    "#finding the inital values for psi_i and psi_r\n",
     "psi_i=find_psi_im(x,0)\n",
     "psi_r=find_psi_re(x,delta_t/2)\n",
     "\n",
-    "psi_i[0]=0\n",
-    "psi_i[-1]=0\n",
-    "psi_r[0]=0\n",
-    "psi_r[-1]\n",
     "\n",
-    "#normalization\n",
-    "psi_i=psi_i/np.linalg.norm(psi_i)\n",
-    "psi_r=psi_r/np.linalg.norm(psi_r)\n",
-    "\n",
-    "\n",
-    "\n",
+    "\"\"\"SIGRID rydd i disse to funksjonene!\"\"\"\n",
+    "#functions to update psi_r and psi_i\n",
     "def newPsi_im(psi_i,psi_r,delta_x,delta_t, V):\n",
     "    nextPsi_i=np.zeros(len(psi_i))\n",
     "    #psi_i[1:-1] = psi_i[1:-1] - delta_t *((V[1:-1]/h_bar*psi_r[1:-1]) - h_bar/(2*m) *(psi_r[2:]-2*psi_r[1:-1]+psi_r[:-2])/delta_x**2)\n",
@@ -292,7 +262,7 @@
     "    nextPsi_i[1:-1] = psi_i[1:-1] - delta_t *(V[1:-1]/h_bar*psi_r[1:-1] - h_bar/(2*m) *(psi_r[2:]-2*psi_r[1:-1]+psi_r[:-2])/delta_x**2)\n",
     "    #print(psi_i[1],V[1],psi_r[2],psi_r[1],psi_r[0])\n",
     "    #print(psi_i[1],V[1],psi_r[2],psi_r[1],psi_r[0])\n",
-    "    psi_i=nextPsi_i\n",
+    "    #psi_i=nextPsi_i\n",
     "    #psi_i=psi_i/np.linalg.norm(psi_i)\n",
     "    return nextPsi_i\n",
     "                     \n",
@@ -300,7 +270,7 @@
     "    nextPsi_r=np.zeros(len(psi_r))\n",
     "    #psi_r[1:-1] = psi_r[1:-1] - delta_t *((V[1:-1]/h_bar*psi_i[1:-1]) - h_bar/(2*m) *(psi_i[2:]-2*psi_i[1:-1]+psi_i[:-2])/delta_x**2)\n",
     "    nextPsi_r[1:-1] = psi_r[1:-1] + delta_t *((V[1:-1]/h_bar*psi_i[1:-1]) - h_bar/(2*m) *(psi_i[2:]-2*psi_i[1:-1]+psi_i[:-2])/delta_x**2)\n",
-    "    psi_r=nextPsi_r\n",
+    "    #psi_r=nextPsi_r\n",
     "    return nextPsi_r\n",
     "    \n",
     "\n",
@@ -317,18 +287,60 @@
     "\n",
     "#plt.plot(x,psi_i)\n",
     "#plt.plot(x,psi_r)\n",
-    "#for i in range(150000):\n",
-    "#    psi_i=newPsi_im(psi_i,psi_r,delta_x,delta_t, V)\n",
-    "#    psi_r=newPsi_re(psi_i,psi_r,delta_x,delta_t, V)\n",
-    "    \n",
+    "\"\"\"Kanskje se litt på å ta inn array by referance ikke copy??\"\"\"\n",
+    "def propagate_psi(psi_i,psi_r,timesteps,V):\n",
+    "    for i in range(timesteps):\n",
+    "        psi_i=newPsi_im(psi_i,psi_r,delta_x,delta_t, V)\n",
+    "        psi_r=newPsi_re(psi_i,psi_r,delta_x,delta_t, V)\n",
+    "    return psi_i, psi_r\n",
     "    \n",
     "#print(psi_i[0])  \n",
     "#print(psi_i[1],psi_i[2],psi_i[-2])\n",
     "\n",
-    "#plt.plot(x,psi_i)\n",
-    "#plt.plot(x,psi_r)\n",
-    "#plt.show()\n",
-    "\n"
+    "psi_i, psi_r = propagate_psi(psi_i,psi_r,timesteps,V2)\n",
+    "    \n",
+    "    \n",
+    "plt.plot(x,psi_i)\n",
+    "plt.plot(x,psi_r)\n",
+    "plt.show()\n",
+    "\n",
+    "\"\"\"Det ser ikke ut som den blir helt 15???\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plotting for different values of sigma_x\n",
+    "sigma_xs=[0.5,1,2]\n",
+    "psi_squared_list=[]\n",
+    "for i in range(len(sigma_xs)):\n",
+    "    sigma_x=sigma_xs[i]\n",
+    "    \n",
+    "    #finding initial values: \n",
+    "    psi_i=find_psi_im(x,0)\n",
+    "    psi_r=find_psi_re(x,delta_t/2)\n",
+    "    \n",
+    "    psi_i,psi_r = propagate_psi(timesteps,psi_i,psi_r)\n",
+    "    \n",
+    "    #calculating the probability density and adding to a list such that it can be plotted later\n",
+    "    psi_squared_list.append(psi_i**2+psi_r**2)\n",
+    "       \n",
+    "    print(\"sigma_x =\",sigma_x)\n",
+    "    plt.plot(x,psi_i)\n",
+    "    plt.plot(x,psi_r)\n",
+    "    plt.show()\n",
+    "    \n",
+    "#plotting the probability density psi_squared\n",
+    "plt.plot(x,psi_squared_list[0], label=r'$\\psi^2$ for $\\sigma_x=0.5')\n",
+    "plt.plot(x,psi_squared_list[1], label=r'$\\psi^2$ for $\\sigma_x=1')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\"\"\"MANGLER: test for ulike verdier av delta_t og finn et passende valg\"\"\""
    ]
   },
   {
@@ -338,12 +350,12 @@
    "outputs": [],
    "source": [
     "#making animation: (funker ikke enda) \n",
-    "    \n",
+    "%matplotlib notebook\n",
     "    \n",
     "def animate_psi_im(i): \n",
-    "    for i in range(100):\n",
-    "        psi_i=newPsi_im(psi_i,psi_r,delta_x,delta_t,V)\n",
-    "        psi_r=newPsi_re(psi_i,psi_r,delta_x,delta_t,V)\n",
+    "    for i in range(10):\n",
+    "        psi_i=newPsi_im(psi_i,psi_r,delta_x,delta_t,V2)\n",
+    "        psi_r=newPsi_re(psi_i,psi_r,delta_x,delta_t,V2)\n",
     "    line.set_ydata(psi_i)\n",
     "    return line\n",
     "\n",
@@ -371,19 +383,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "l=L/50\n",
     "V0=E/2\n",
+    "sigma_x=1\n",
     "\n",
-    "def V(x):\n",
-    "    if (L/2-l/2<x)or(L/2+l/2>x):\n",
-    "        return E/2\n",
+    "def V(x,V_0,l):\n",
+    "    if (L/2-l/2<x) or (L/2+l/2>x):\n",
+    "        return V_0\n",
     "    else: \n",
-    "        return 0\n",
-    "    \n",
-    "#funkjsonen skal ta in de siste utregnede psi_r, altså psi_r(T)\n",
-    "def find_transmission_possibility(psi_rT,psi_iTNx):\n",
-    "    t_prob=np.linalg.norm(psi_rT[Nx/2:])\n",
-    "    return t_prob"
+    "        return 0 \n",
+    "\n",
+    "#defing the potensial\n",
+    "V3= V(x,V0,l)\n",
+    "\n",
+    "#initial values for psi_i and psi_r: \n",
+    "psi_i=find_psi_im(x,0)\n",
+    "psi_r=find_psi_re(x,delta_t/2)\n",
+    "\n",
+    "psi_i, psi_r = propagate_psi(psi_i,psi_r,timesteps,V3)\n",
+    "\n",
+    "#plotting\n",
+    "plt.plot(x,psi_i)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"MANGLER: \n",
+    "-fiks potensialet \n",
+    "-regn ut transmisjonssannsynligheten\n",
+    "\"\"\""
    ]
   },
   {
@@ -399,8 +427,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "\"Making a list of 50 different values of V0\"\n",
     "V0_list=np.linspace(0,(3*E)/2,50)\n"
    ]
@@ -504,18 +530,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
   }
  },
  "nbformat": 4,
