--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -297,6 +297,8 @@
     "#print(psi_i[0])  \n",
     "#print(psi_i[1],psi_i[2],psi_i[-2])\n",
     "\n",
+    "print(timesteps)\n",
+    "\n",
     "psi_i, psi_r = propagate_psi(psi_i,psi_r,timesteps,V2)\n",
     "    \n",
     "    \n",
@@ -530,6 +532,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
