--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -189,7 +189,8 @@
     "\n",
     "$\n",
     "\\Psi_R(x,t+\\Delta t/2)= \\Psi_R(x,t)+\\Delta t \\Big [ V(x)\\Psi_I(x,t) -\\frac{\\hbar^2}{2m} \\frac{\\Psi_I(x,t-\\Delta t)-2\\Psi_I(x,t)+\\Psi_I(x,t+\\Delta t)}{(\\Delta x)^2}   \\Big ]\n",
-    "$"
+    "$\n",
+    "\n"
    ]
   },
   {
@@ -222,25 +223,15 @@
     "psi_i=find_psi_im(x,0)\n",
     "psi_r=find_psi_re(x,delta_t/2)\n",
     "\n",
-    "\n",
-    "\"\"\"SIGRID rydd i disse to funksjonene!\"\"\"\n",
     "#functions to update psi_r and psi_i\n",
     "def newPsi_im(psi_i,psi_r,delta_x,delta_t, V):\n",
     "    nextPsi_i=np.zeros(len(psi_i))\n",
-    "    #psi_i[1:-1] = psi_i[1:-1] - delta_t *((V[1:-1]/h_bar*psi_r[1:-1]) - h_bar/(2*m) *(psi_r[2:]-2*psi_r[1:-1]+psi_r[:-2])/delta_x**2)\n",
-    "    \n",
     "    nextPsi_i[1:-1] = psi_i[1:-1] - delta_t *(V[1:-1]/h_bar*psi_r[1:-1] - h_bar/(2*m) *(psi_r[2:]-2*psi_r[1:-1]+psi_r[:-2])/delta_x**2)\n",
-    "    #print(psi_i[1],V[1],psi_r[2],psi_r[1],psi_r[0])\n",
-    "    #print(psi_i[1],V[1],psi_r[2],psi_r[1],psi_r[0])\n",
-    "    #psi_i=nextPsi_i\n",
-    "    #psi_i=psi_i/np.linalg.norm(psi_i)\n",
     "    return nextPsi_i\n",
     "                     \n",
     "def newPsi_re(psi_i,psi_r,delta_x,delta_t, V):\n",
     "    nextPsi_r=np.zeros(len(psi_r))\n",
-    "    #psi_r[1:-1] = psi_r[1:-1] - delta_t *((V[1:-1]/h_bar*psi_i[1:-1]) - h_bar/(2*m) *(psi_i[2:]-2*psi_i[1:-1]+psi_i[:-2])/delta_x**2)\n",
     "    nextPsi_r[1:-1] = psi_r[1:-1] + delta_t *((V[1:-1]/h_bar*psi_i[1:-1]) - h_bar/(2*m) *(psi_i[2:]-2*psi_i[1:-1]+psi_i[:-2])/delta_x**2)\n",
-    "    #psi_r=nextPsi_r\n",
     "    return nextPsi_r\n",
     "    \n",
     "\n",
@@ -251,10 +242,6 @@
     "        psi_i=newPsi_im(psi_i,psi_r,delta_x,delta_t, V)\n",
     "        psi_r=newPsi_re(psi_i,psi_r,delta_x,delta_t, V)\n",
     "    return psi_i, psi_r\n",
-    "\n",
-    "    \n",
-    "#print(psi_i[0])  \n",
-    "#print(psi_i[1],psi_i[2],psi_i[-2])\n",
     "\n",
     "\n",
     "#run propagation\n",
@@ -285,7 +272,7 @@
     "    psi_i=find_psi_im(x,0)\n",
     "    psi_r=find_psi_re(x,delta_t/2)\n",
     "    \n",
-    "    psi_i,psi_r = propagate_psi(timesteps,psi_i,psi_r)\n",
+    "    psi_i,psi_r = propagate_psi(psi_i,psi_r,timesteps,V2)\n",
     "    \n",
     "    #calculating the probability density and adding to a list such that it can be plotted later\n",
     "    psi_squared_list.append(psi_i**2+psi_r**2)\n",
@@ -296,13 +283,14 @@
     "    plt.show()\n",
     "    \n",
     "#plotting the probability density psi_squared\n",
-    "plt.plot(x,psi_squared_list[0], label=r'$\\psi^2$ for $\\sigma_x=0.5')\n",
-    "plt.plot(x,psi_squared_list[1], label=r'$\\psi^2$ for $\\sigma_x=1')\n",
+    "plt.plot(x,psi_squared_list[0], label=r'$\\psi^2$ for $\\sigma_x=0.5$')\n",
+    "plt.plot(x,psi_squared_list[1], label=r'$\\psi^2$ for $\\sigma_x=1$')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
     "\n",
-    "\"\"\"MANGLER: test for ulike verdier av delta_t og finn et passende valg\"\"\""
+    "\"\"\"MANGLER: test for ulike verdier av delta_t og finn et passende valg\"\"\"\n",
+    "list_of_delta_ts=[0.001,0.0001,0.00001,0.000001]"
    ]
   },
   {
@@ -376,9 +364,23 @@
     "#plotting\n",
     "plt.plot(x,psi_i)\n",
     "plt.plot(x,psi_r)\n",
+    "plt.show()\n",
+    "\n",
+    "#transmision probability = the integrated propability density from x= 10 to x= 20\n",
+    "def find_transmission_probability(psi_i,psi_r): \n",
+    "    psi_absqrd=psi_i**2+psi_r**2\n",
+    "    num_of_points_before_barrier=int(Nx/2)\n",
+    "    Pt=np.sum(psi_absqrd[num_of_points_before_barrier:]) \n",
+    "    return Pt\n",
+    "    \n",
+    "psi_absqrd=psi_i**2+psi_r**2\n",
+    "plt.plot(x,psi_absqrd)\n",
+    "plt.show()\n",
     "\n",
     "\n",
-    "\n",
+    "num_of_points_before_barrier=int(Nx/2)\n",
+    "Pt=np.sum(psi_absqrd[num_of_points_before_barrier:])   #Probability for transmision\n",
+    "print(\"Transmision probability: \",Pt)\n",
     "\"\"\"MANGLER: \n",
     "-regn ut transmisjonssannsynligheten\n",
     "-???? er ikke potensialet vårt dritstort ift oppgaveteksten?\n",
@@ -398,27 +400,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "\"Making a list of 50 different values of V0\"\n",
     "V0_list=np.linspace(0,(3*E)/2,50)\n",
+    "PtV0  = np.zeros(len(V0_list))  #list to fill in transmision probabilities \n",
     "\n",
-    "plt.plot(x,V3_arr)\n",
-    "plt.show()\n",
     "\n",
     "for i in range(len(V0_list)):\n",
     "    V3_arr= np.zeros(len(x)) #making an array of zeros\n",
     "    for j in range(len(x)):\n",
     "        V3_arr[j]=V3(j*delta_x,V0_list[i],l) #x=i*delta_x \n",
+    "        \n",
+    "    \"\"\"Må kanskje starte med initialverdiene til psi_i og psi_r. Ikke sikker\"\"\"\n",
+    "    psi_i0=find_psi_im(x,0)\n",
+    "    psi_r0=find_psi_re(x,delta_t/2)\n",
+    "        \n",
     "    psi_i, psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V3_arr)\n",
-    "    plt.plot(x,psi_i)\n",
-    "    plt.show()"
+    "    #plt.plot(x,psi_i)\n",
+    "    #plt.show()\n",
+    "    \n",
+    "    PtV0[i]=find_transmission_probability(psi_i,psi_r)\n",
+    "    \n",
+    "\n",
+    "#plotting transmission probability as a function of potenial barrier height\n",
+    "plt.plot(V0_list, PtV0)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\"\"\"Mangler:\n",
+    "-refleksjonssansynlighet\n",
+    "\"\"\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -433,8 +445,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\"\"\"Tror vi må ha større Nx for å få stor nok oppløsning\"\"\"\n",
+    "Nx=1200  \n",
+    "\n",
     "\"Making a list of 50 different values of L\"\n",
-    "L_list=np.linspace(0,L/20,50)\n"
+    "L_list=np.linspace(0,L/20,50)\n",
+    "PtL=np.zeros(len(L_list))\n",
+    "V05 = 9/10*E #potential barrier height for problem 5 \n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in range(len(L_list)):\n",
+    "    print(i)\n",
+    "    psi_i0=find_psi_im(x,0)\n",
+    "    psi_r0=find_psi_re(x,delta_t/2)\n",
+    "    V5= np.zeros(len(x)) #making an array of zeros\n",
+    "    for j in range(len(x)):\n",
+    "        V5[j]=V3(j*delta_x,V05,L_list[i]) #x=i*delta_x \n",
+    "    \n",
+    "    psi_i, psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V5)\n",
+    "    \n",
+    "    Pt= find_transmission_probability(psi_i,psi_r)\n",
+    "    PtL[i]=Pt    \n",
+    "    \n",
+    "    \n",
+    "plt.plot(L_list,PtL)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "print(L_list)\n",
+    "print(PtL)\n",
+    "plt.plot(L_list,PtL)"
    ]
   },
   {
