--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -9,11 +9,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# sjekk valg av delta_t i senere oppgaver med ulik V_max "
+   ]
   },
   {
    "cell_type": "code",
@@ -36,8 +36,6 @@
     "m=1\n",
     "k_0=20\n",
     "L=20\n",
-    "t_0=0   \n",
-    "\"\"\"Bruker vi t_0???????????\"\"\"\n",
     "\n",
     "#plotting parameters \n",
     "fontsize=15\n",
@@ -86,15 +84,21 @@
     "\n",
     "\n",
     "# Skriv noe om valg av delta t\n",
+    "\n",
+    "\n",
     "# Skriv noe om energi og omega"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "sigma_x=1.5 #??\n",
     "xs=5 #bare satte 5 fordi vi skal ha den verdien etterhvert\n",
     "Nx= 1000\n",
@@ -134,6 +138,7 @@
     "psi_i=find_psi_im(x,0)\n",
     "psi_r=find_psi_re(x,delta_t/2)\n",
     "\n",
+    "\n",
     "#plotting\n",
     "plt.title('')\n",
     "plt.plot(x,psi_i,label=r'$\\Psi_I(x,0)$')\n",
@@ -149,7 +154,8 @@
     "plt.show()\n",
     "\n",
     "\"\"\"testet at den faktisk er normalisert\"\"\"\n",
-    "print(np.sum(psi_squared))\n",
+    "print(\"Check that psi is normalized\",np.sum(psi_squared))\n",
+    "print(\"EnergY: \", E)\n",
     "\n"
    ]
   },
@@ -157,7 +163,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have choosen the number of x-values, Nx, to be 1000 which gives a nice and smooth graph for $\\Psi_I$ and $\\Psi_R$. The smal differance in time between the to graphs does not make any significance at the plot and the probability density also has a smooth graph. The wave packet has a gausian shape and is located around $x_s$ which we have choosen to be 5."
+    "Here we have choosen the number of x-values, Nx, to be 1000 which gives a nice and smooth graph for $\\Psi_I$ and $\\Psi_R$. The smal differance in time between the to graphs does not make any significance at the plot and the probability density also has a smooth graph. The wave packet has a gausian shape and is located around $x_s$ which we have choosen to be 5.\n",
+    "\n",
+    "After finding that Nx=1000 gives a smooth graph we could calculate $\\Delta x$ and from there choose $\\Delta t$ such that it statisfies the equation for numerical stability in the exercise sheet\n",
+    "\n",
+    "$\n",
+    "\\Delta_t \\ll \\frac{\\hbar}{\\frac{\\hbar^2}{2m} \\frac{1}{(\\Delta x)^2}+ V_{max}}.\n",
+    "$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -214,7 +231,7 @@
     "\n",
     "v_g=(h_bar*k_0)/m\n",
     "T= L/(2*v_g)\n",
-    "timesteps=int(T/delta_t)\n",
+    "timesteps=int(T/delta_t) #number of steps in the iteration \n",
     "\n",
     "#setting the potensial to be zero \n",
     "V2=np.zeros(len(x)) \n",
@@ -299,9 +316,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Sigrid tester animasjon\"\"\"\n",
+    "\n",
     "#making animation: (funker ikke enda) \n",
     "%matplotlib notebook\n",
+    "\n",
+    "#oppskrift\n",
+    "\n",
+    "# First set up the figure, the axis, and the plot element we want to animate\n",
+    "fig = plt.figure()\n",
+    "ax = plt.axes(xlim=(0,20),ylim=(-0.15,0.15))\n",
+    "line, = ax.plot([], [])\n",
+    "x_test = np.linspace(0, 20, 1000)\n",
+    "psi_i=find_psi_im(x,0)\n",
+    "psi_r=find_psi_re(x,delta_t/2)\n",
+    "\n",
+    "# initialization function: plot the background of each frame\n",
+    "def init():\n",
+    "    line.set_data([], [])\n",
+    "    return line,\n",
+    "\n",
+    "# animation function.  This is called sequentially\n",
+    "def animate(i):\n",
+    "    #t=delta_t*i*1000 \n",
+    "    #y_test = 0.10*np.sin(2 * np.pi * (x_test - 0.01 * i))\n",
     "    \n",
+    "    psi_i\n",
+    "    line.set_data(x_test, y_test)\n",
+    "    return line\n",
+    "\n",
+    "\n",
+    "# call the animator.  blit=True means only re-draw the parts that have changed.\n",
+    "anim = animation.FuncAnimation(fig, animate, init_func=init,frames=100, interval=200, blit=True)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "x=np.arange(0,L,delta_x)\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = plt.axes(xlim=(0,20),ylim=(-0.15,0.15))\n",
+    "line, = ax.plot([], [])\n",
+    "\n",
+    "def init_psi():\n",
+    "    psi_i=find_psi_im(x,0)\n",
+    "    psi_r=find_psi_re(x,delta_t/2)\n",
+    "    line.set_data(x,psi_i)\n",
+    "    return line\n",
+    "    \n",
+    "\n",
     "def animate_psi_im(i): \n",
     "    for i in range(10):\n",
     "        psi_i=newPsi_im(psi_i,psi_r,delta_x,delta_t,V2)\n",
@@ -309,15 +373,21 @@
     "    line.set_ydata(psi_i)\n",
     "    return line\n",
     "\n",
+    "\n",
     "def init():  # only required for blitting to give a clean slate.\n",
     "    line.set_ydata([np.nan] * len(x))\n",
     "    return line,\n",
     "\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "line, = ax.plot(x, psi_i)\n",
+    "def animatetest(i):\n",
+    "    x = np.linspace(0, 2, 1000)\n",
+    "    y = np.sin(2 * np.pi * (x - 0.01 * i))\n",
+    "    line.set_data(x, y)\n",
+    "    return (line,)\n",
+    "\n",
+    "\n",
     "ani = animation.FuncAnimation(fig, animate_psi_im, init_func=init, frames=100, interval=20, blit=True)\n",
-    "plt.show()"
+    "\"\"\""
    ]
   },
   {
@@ -333,7 +403,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#DEFINING FUNCTIONS\n",
+    "\n",
+    "#Greating a array of potental with a potential barrier\n",
+    "def potential_barrier(V0,l,x):\n",
+    "    return V0*np.heaviside(x-L/2+l/2,V0)*np.heaviside(L/2+l/2-x,V0)\n",
+    "\n",
+    "#transmision probability = the integrated propability density from x= 10 to x= 20\n",
+    "def find_transmission_probability(psi_i,psi_r): \n",
+    "    psi_absqrd=psi_i**2+psi_r**2\n",
+    "    num_of_points_before_barrier=int(Nx/2)\n",
+    "    Pt=np.sum(psi_absqrd[num_of_points_before_barrier:]) \n",
+    "    return Pt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib inline\n",
+    "\n",
+    "#Setting the values spesific for this problem \n",
     "E=(h_bar*k_0)**2/(2*m)\n",
     "l=L/50\n",
     "V_0=E/2\n",
@@ -366,12 +458,7 @@
     "plt.plot(x,psi_r)\n",
     "plt.show()\n",
     "\n",
-    "#transmision probability = the integrated propability density from x= 10 to x= 20\n",
-    "def find_transmission_probability(psi_i,psi_r): \n",
-    "    psi_absqrd=psi_i**2+psi_r**2\n",
-    "    num_of_points_before_barrier=int(Nx/2)\n",
-    "    Pt=np.sum(psi_absqrd[num_of_points_before_barrier:]) \n",
-    "    return Pt\n",
+    "\n",
     "    \n",
     "psi_absqrd=psi_i**2+psi_r**2\n",
     "plt.plot(x,psi_absqrd)\n",
@@ -379,8 +466,10 @@
     "\n",
     "\n",
     "num_of_points_before_barrier=int(Nx/2)\n",
-    "Pt=np.sum(psi_absqrd[num_of_points_before_barrier:])   #Probability for transmision\n",
-    "print(\"Transmision probability: \",Pt)\n",
+    "T=np.sum(psi_absqrd[num_of_points_before_barrier:])   #Probability for transmision\n",
+    "R=np.sum(psi_absqrd[:num_of_points_before_barrier])\n",
+    "print(\"Transmision probability: \",T, \" Reflection propability: \",R)\n",
+    "print(R+T)\n",
     "\"\"\"MANGLER: \n",
     "-regn ut transmisjonssannsynligheten\n",
     "-???? er ikke potensialet vårt dritstort ift oppgaveteksten?\n",
@@ -442,13 +531,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\"\"\"Tror vi må ha større Nx for å få stor nok oppløsning\"\"\"\n",
-    "Nx=1200  \n",
-    "\n",
+    "#Nx=2000  \n",
+    "#delta_x= L/(Nx)   \n",
     "\"Making a list of 50 different values of L\"\n",
     "L_list=np.linspace(0,L/20,50)\n",
     "PtL=np.zeros(len(L_list))\n",
@@ -456,13 +547,13 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "for i in range(len(L_list)):\n",
     "    print(i)\n",
     "    psi_i0=find_psi_im(x,0)\n",
     "    psi_r0=find_psi_re(x,delta_t/2)\n",
-    "    V5= np.zeros(len(x)) #making an array of zeros\n",
-    "    for j in range(len(x)):\n",
-    "        V5[j]=V3(j*delta_x,V05,L_list[i]) #x=i*delta_x \n",
+    "    V5= potential_barrier(V05,L_list[i],x)\n",
     "    \n",
     "    psi_i, psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V5)\n",
     "    \n",
@@ -472,18 +563,6 @@
     "    \n",
     "plt.plot(L_list,PtL)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "print(L_list)\n",
-    "print(PtL)\n",
-    "plt.plot(L_list,PtL)"
    ]
   },
   {
@@ -578,9 +657,10 @@
     "# animation function. This is called sequentially\n",
     "def animate(i): #i endres hver gang... altså må i=antall timesteps i=framenumber.\n",
     "    t=i\n",
-    "    psi_i,psi_r = propagate_psi(psi_i0,psi_r0,t,V)\n",
+    "    timesteps=100\n",
+    "    psi_i,psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V)\n",
     "    line.set_data(x, psi_i)\n",
-    "    print(\"yyo\")\n",
+    "    #print(\"yyo\")\n",
     "    return (line,)\n",
     "\n",
     "def animatetest(i):\n",
@@ -589,10 +669,10 @@
     "    line.set_data(x, y)\n",
     "    return (line,)\n",
     "\n",
-    "#animtest = animation.FuncAnimation(fig, animatetest, init_func=init, frames=100000, interval=20, blit=True)\n",
+    "animtest = animation.FuncAnimation(fig, animatetest, init_func=init, frames=100000, interval=20, blit=True)\n",
     "\n",
     "# call the animator. blit=True means only re-draw the parts that have changed.\n",
-    "anim = animation.FuncAnimation(fig, animate, init_func=init,frames=10000, interval=20, blit=True)\n",
+    "#anim = animation.FuncAnimation(fig, animate, init_func=init,frames=10000, interval=20, blit=True)\n",
     "\n",
     "rc('animation', html='html5')\n"
    ]
@@ -600,9 +680,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib notebook\n",
+    "#sigrid tester sykt chill animasjon: \n",
+    "\n",
+    "Nx=1000 \n",
+    "#making a array of x-values from 0 to L\n",
+    "x=np.arange(0,L,delta_x)\n",
+    "\n",
+    "l=L/50/20* 40\n",
+    "V_0=E/2\n",
+    "\n",
+    "def V3(x,V_0,l):\n",
+    "    if (L/2-l/2<x) and (L/2+l/2>x):\n",
+    "        return V_0\n",
+    "    else: \n",
+    "        return 0 \n",
+    "\n",
+    "#defing the potensial as an array\n",
+    "V3_arr= np.zeros(len(x)) #making an array of zeros\n",
+    "for i in range(len(x)):\n",
+    "    V3_arr[i]=V3(i*delta_x,V_0,l) #x=i*delta_x \n",
+    "\n",
+    "V_anitest=potential_barrier(V_0,l,x)\n",
+    "\n",
+    "\n",
+    "#making arrays of initial values of psi_r(x,delta_t/2) and psi_i(x,0)\n",
+    "psi_i=find_psi_im(x,0)\n",
+    "psi_r=find_psi_re(x,delta_t/2)\n",
+    "\n",
+    "psi_i_list=np.zeros((200,len(x)))\n",
+    "\n",
+    "for i in range(200):\n",
+    "    psi_i,psi_r=propagate_psi(psi_i,psi_r,300,V_anitest)\n",
+    "    psi_i_list[i]=psi_i\n",
+    "    \n",
+    "#plt.plot(x,psi_i_list[50])\n",
+    "#plt.show()\n",
+    "\n",
+    "\n",
+    "# First set up the figure, the axis, and the plot element we want to animate\n",
+    "fig = plt.figure()\n",
+    "ax = plt.axes(xlim=(0, 20), ylim=(-0.1,0.1))\n",
+    "line, = ax.plot([], [], lw=2)\n",
+    "\n",
+    "# initialization function: plot the background of each frame\n",
+    "def init():\n",
+    "    line.set_data([], [])\n",
+    "    return line,\n",
+    "\n",
+    "# animation function.  This is called sequentially\n",
+    "def animate(i):\n",
+    "    y = psi_i_list[i]\n",
+    "    line.set_data(x, y)\n",
+    "    return line,\n",
+    "\n",
+    "# call the animator.  blit=True means only re-draw the parts that have changed.\n",
+    "anim = animation.FuncAnimation(fig, animate, init_func=init,frames=200, interval=20, blit=True)"
+   ]
   },
   {
    "cell_type": "code",
