--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -73,7 +73,7 @@
     "\\Psi_R = C e^{ \\frac{(x-x_s)^2}{2 \\sigma_x^2} } \\cos(k_0 x-\\omega t)\n",
     "$\n",
     "\n",
-    "To normalize $\\Psi$ we use that $|\\Psi|^2=\\Psi_I^2+Psi_R^2$. We also know that $|\\Psi_I|^2=|\\Psi_R|^2$. This means $|\\Psi_I|=\\frac{1}{2}$. \n",
+    "To normalize $\\Psi$ we use that $|\\Psi|^2=\\Psi_I^2+Psi_R^2$. We also know that $|\\Psi_I|^2=|\\Psi_R|^2$. This means that $|\\Psi_I|^2=|\\Psi_R|^2=\\frac{1}{2}$. \n",
     "\n",
     "\n",
     "\n",
@@ -93,7 +93,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -494,6 +494,7 @@
     "V0_list=np.linspace(0,(3*E)/2,50)\n",
     "PtV0  = np.zeros(len(V0_list))  #list to fill in transmision probabilities \n",
     "\n",
+    "print(\"ok\")\n",
     "\n",
     "for i in range(len(V0_list)):\n",
     "    V3_arr= np.zeros(len(x)) #making an array of zeros\n",
@@ -512,7 +513,10 @@
     "    \n",
     "\n",
     "#plotting transmission probability as a function of potenial barrier height\n",
-    "plt.plot(V0_list, PtV0)\n",
+    "plt.plot(V0_list/E, PtV0)\n",
+    "plt.hlines(1,0,1,linestyles=\"dotted\",color=\"red\")\n",
+    "plt.vlines(1,0,1,linestyles=\"dotted\",color=\"red\")\n",
+    "plt.hlines(0,1,1.5,linestyles=\"dotted\",color=\"red\")\n",
     "plt.show()\n",
     "\n",
     "\n",
