--- a/numerical_exercise.ipynb
+++ b/numerical_exercise.ipynb
@@ -83,13 +83,9 @@
     "\n",
     "In the propagation we find $\\Psi_R(x,(n+1/2)\\Delta t)$ and $\\Psi_I(x,n*\\Delta t)$ at the n-th timestep. Therefore we want our inital function to be $\\Psi_I(x,0)$ and $\\Psi_R(x, \\frac{ \\Delta t}{2} )$. \n",
     "\n",
-    "\n",
-    "# Skriv noe om valg av delta t\n",
-    "\n",
     "The choise of $\\Delta t$ is discussed in problem 2. \n",
     "\n",
-    "\n",
-    "# Skriv noe om energi og omega\n"
+    "The energy of a free particle is $E=\\frac{\\hbar^2 k_0^2}{2 m}=\\hbar \\omega$."
    ]
   },
   {
@@ -101,6 +97,8 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "plt.rcParams.update(newparams)\n",
+    "\n",
     "\n",
     "sigma_x=1.5 #??\n",
     "xs=5 #bare satte 5 fordi vi skal ha den verdien etterhvert\n",
@@ -224,6 +222,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "plt.rcParams.update(newparams)\n",
     "\n",
     "v_g=(h_bar*k_0)/m\n",
     "T= L/(2*v_g)\n",
@@ -323,7 +322,7 @@
     "\n",
     "#Greating a array of potental with a potential barrier\n",
     "def potential_barrier(V0,l,x):\n",
-    "    return V0*np.heaviside(x-L/2+l/2,V0)*np.heaviside(L/2+l/2-x,V0)\n",
+    "    return V0*np.heaviside(x-L/2+l/2,0)*np.heaviside(L/2+l/2-x,0)\n",
     "\n",
     "#transmision probability = the integrated propability density from x= 10 to x= 20\n",
     "def find_transmission_probability(psi_i,psi_r): \n",
@@ -476,14 +475,20 @@
     "    V5= potential_barrier(V05,L_list[i],x)\n",
     "    \n",
     "    psi_i, psi_r = propagate_psi(psi_i0,psi_r0,timesteps,V5)\n",
-    "    \n",
-    "    Pt= find_transmission_probability(psi_i,psi_r)\n",
-    "    PtL[i]=Pt    \n",
+    "     \n",
+    "    PtL[i] = find_transmission_probability(psi_i,psi_r)  \n",
     "    \n",
     "    \n",
     "plt.plot(L_list,PtL)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
